加入 纹理贴图

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 3.13)
 project(OpenGLTutorial)
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories("./inc/")
+include_directories("${PROJECT_SOURCE_DIR}/inc/")
 
-link_directories("./lib/")
+link_directories("${PROJECT_SOURCE_DIR}/lib/")
 
-set(SRC_LIST main.cpp glad.c)
+set(SRC_LIST main.cpp glad.c stb_image.cpp)
 
 add_executable(OpenGLTutorial ${SRC_LIST})
 
