Shader类及摄像机类封装

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,19 @@ cmake_minimum_required(VERSION 3.13)
 project(OpenGLTutorial)
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories("${PROJECT_SOURCE_DIR}/inc/")
+include_directories("${PROJECT_SOURCE_DIR}/inc/" "${PROJECT_SOURCE_DIR}/src/include")
 
 link_directories("${PROJECT_SOURCE_DIR}/lib/")
 
-set(SRC_LIST main.cpp glad.c stb_image.cpp)
+set(SRC_LIST
+        src/source/main.cpp
+        src/util/glad.c
+        src/util/stb_image.cpp
+        src/include/Shader.h
+        src/source/Shader.cpp
+        src/include/Camera.h
+        src/source/Camera.cpp
+        )
 
 add_executable(OpenGLTutorial ${SRC_LIST})
 
